fix z-index

--- a/src/webCSS/landingPage.css
+++ b/src/webCSS/landingPage.css
@@ -22,6 +22,7 @@ body {
     background-color: #061a2a;
     color: white;
     align-items: center;
+    z-index:3;
 }
 .header-link {
     display: flex;
